--- a/ZohoGetPost/MainWindow.xaml
+++ b/ZohoGetPost/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ZohoGetPost"
         mc:Ignorable="d"
-        Title="MainWindow" Height="525" Width="400" Background="White">
-    <Grid Margin="0,0,0,0">
+        Title="MainWindow" Height="566" Width="527" Background="White">
+    <Grid Margin="0,0,10,-10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width = "104"/>
@@ -26,53 +26,68 @@
             <RowDefinition Height="56"/>
             <RowDefinition Height="56"/>
             <RowDefinition Height="56"/>
-
         </Grid.RowDefinitions>
-        <TextBlock  Grid.Row="1" Grid.Column="1" Margin="3,10,102,28" FontSize="10" FontWeight="Bold" Background="{x:Null}" Foreground="Black" Text="E N T E R  C O D E" Grid.ColumnSpan="2" />
 
-        <TextBox Grid.Column="1" Margin="0,28,79,49" Padding="5,8,0,0" Grid.Row="1" x:Name="CodeInput" Grid.ColumnSpan="3" Panel.ZIndex="1" FontWeight="Bold" BorderBrush="{x:Null}" Background="Black" Foreground="White" Opacity="0.65" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" >
+        <TextBlock Grid.Column="1" Margin="8,25,59,10" FontSize="10" FontWeight="Bold" Background="{x:Null}" Foreground="Black" Text="E N T E R  C O D E" Grid.ColumnSpan="2" Grid.Row="1" />
+        <TextBlock  Grid.Row="5" Grid.Column="1" Margin="8,50,38,42" FontSize="10" FontWeight="Bold" Background="{x:Null}" Foreground="Black" Text="E N T E R  T I C K E T  I D" Grid.ColumnSpan="3" Grid.RowSpan="2" />
+
+        <TextBox Grid.Column="1" Margin="0,46,98,31" Padding="5,8,0,0" Grid.Row="1" x:Name="CodeInput" Grid.ColumnSpan="4" Panel.ZIndex="1" FontWeight="Bold" BorderBrush="{x:Null}" Background="Black" Foreground="White" Opacity="0.65" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" >
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </TextBox.Resources>
         </TextBox>
-        <Button x:Name="GetATicket" Content="G E T  A  T I C K E T" Margin="0,28,102,23" Grid.Row="6" Click="Button_Click_GetTicket" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="4" Grid.Column="1" Grid.RowSpan="2">
+        <TextBox Grid.Column="1" Margin="0,20,98,0" Padding="5,8,0,0" Grid.Row="6" x:Name="TicketIDInput" Panel.ZIndex="1" FontWeight="Bold" BorderBrush="{x:Null}" Background="Black" Foreground="White" Opacity="0.65" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="4" >
+            <TextBox.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="10"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+        <Button x:Name="GetATicket" Content="G E T  A  T I C K E T" Margin="0,12,-11,0" Grid.Row="7" Click="Button_Click_GetTicket" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.Column="1" Grid.ColumnSpan="4">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="EnterButton" Content="E N T E R" Margin="30,28,0,49" Grid.Row="1" Click="Button_Click_Enter" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.Column="3" Grid.RowSpan="2">
+        <Button x:Name="EnterCodeButton" Content="E N T E R" Margin="14,46,-11,31" Grid.Row="1" Click="Button_Click_EnterCode" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.Column="4" Grid.RowSpan="2">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="PostForAccessToken" Content="G E T  A  N E W  A C C E S S  T O K E N" Grid.Row="2" Click="Button_Click_Get_New" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="3" Height="60" VerticalAlignment="Top" Grid.Column="1" Grid.RowSpan="2" Margin="0,24,0,0">
+        <Button x:Name="EnterTicketIDButton" Content="E N T E R" Margin="16,20,-11,0" Grid.Row="6" Click="Button_Click_EnterTicketID" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.Column="4">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="RefreshToken" Content="R E F R E S H  A C C E S S  T O K E N" Margin="0,10,0,42" Grid.Row="5" Click="Button_Click_RefreshToken" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black"  Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="3" Grid.Column="1" Grid.RowSpan="2">
+        <Button x:Name="PostForAccessToken" Content="G E T  A  N E W  A C C E S S  T O K E N" Grid.Row="2" Click="Button_Click_Get_New" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Height="44" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="4" Margin="0,35,-11,0" Grid.RowSpan="2">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="Close" Content="C L O S E" Margin="0,52,48,10" Grid.Row="7" Click="Button_Click_Close" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" FontFamily="Segoe UI" Opacity="0.8" FontSize="10" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <Button x:Name="RefreshToken" Content="R E F R E S H  A C C E S S  T O K E N" Margin="0,44,-11,26" Grid.Row="4" Click="Button_Click_RefreshToken" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black"  Opacity="0.8" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="4" Grid.Column="1" Grid.RowSpan="2">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="CheckIfExpired" Content="C H E C K  I F  T O K E N  E X P I R E D" Margin="0,41,0,10" Grid.Row="3" Click="Button_Click_CheckExpiry" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Background="Black" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="3" Grid.RowSpan="2" Grid.Column="1">
+        <Button x:Name="Close" Content="C L O S E" Margin="0,45,5,28" Grid.Row="8" Click="Button_Click_Close" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="Black" FontFamily="Segoe UI" Opacity="0.8" FontSize="10" Grid.Column="1" Grid.RowSpan="2">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="10"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <Button x:Name="CheckIfExpired" Content="C H E C K  I F  T O K E N  E X P I R E D" Margin="0,39,-11,28" Grid.Row="3" Click="Button_Click_CheckExpiry" Panel.ZIndex="2" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Opacity="0.8" Background="Black" FontFamily="Segoe UI" FontSize="10" Grid.ColumnSpan="4" Grid.Column="1" Grid.RowSpan="2">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
